test/functions/deitz/test_param_function_with_conditional.good
test_param_function_with_conditional.chpl:1: In function 'foo':
test_param_function_with_conditional.chpl:2: error: param function cannot contain a non-param conditional
