test/functions/deitz/test_param_function_with_conditional.chpl
proc foo(i: int) param {
  if i < 1 then
    return 0;
  else
    return 2;
}

writeln(foo(3));
